demo03/apply-jenkins/jenkins/nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-nodeport
  namespace: jenkins
spec:
  type: NodePort
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      nodePort: 30014
      name: http
    # - protocol: TCP
    #   port: 50000
    #   targetPort: 50000
    #   name: svs-discovery
